# submission-checker

./: action.yml  pyproject.toml
flathub_submission_checker/: constants.py  github_client.py  parsing.py  validation.py  validator.py
tests/: test_submission_checker.py
